--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+# Dependencies
 **/node_modules
+
+# Build outputs
 **/dist
+**/dist-ssr
+
+# Environment files
 **/.env
 
 # Logs
@@ -11,9 +17,7 @@
 **/pnpm-debug.log*
 **/lerna-debug.log*
 
-**/node_modules
-**/dist
-**/dist-ssr
+# Local files
 **/*.local
 
 # Editor directories and files
