--- a/forkgpt-frontend/package.json
+++ b/forkgpt-frontend/package.json
@@ -10,17 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^32.3.3",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.1",
     "@googlemaps/markerclusterer": "^2.5.3",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.62.11",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@vis.gl/react-google-maps": "^1.4.2",
+    "ag-grid-community": "^33.0.4",
+    "ag-grid-react": "^33.0.4",
     "axios": "^1.7.9",
     "firebase": "^10.8.0",
     "forkgpt-api-types": "file:../forkgpt-api-types/forkgpt-api-types-1.0.22.tgz",
+    "gridstack": "^11.3.0",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.0",
+    "react-gridstack": "^0.1.4",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
@@ -31,6 +43,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-grid-layout": "^1.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
