--- a/forkgpt-frontend/package.json
+++ b/forkgpt-frontend/package.json
@@ -22,11 +22,12 @@
     "@tanstack/react-query": "^5.62.11",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@vis.gl/react-google-maps": "^1.4.2",
+    "ably": "^2.6.3",
     "ag-grid-community": "^33.0.4",
     "ag-grid-react": "^33.0.4",
     "axios": "^1.7.9",
     "firebase": "^10.8.0",
-    "forkgpt-api-types": "file:../forkgpt-api-types/forkgpt-api-types-1.0.24.tgz",
+    "forkgpt-api-types": "file:../forkgpt-api-types/forkgpt-api-types-1.0.31.tgz",
     "gridstack": "^11.3.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
