--- a/forkgpt-frontend/package.json
+++ b/forkgpt-frontend/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.62.11",
     "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vis.gl/react-google-maps": "^1.4.2",
     "ably": "^2.6.3",
     "ag-grid-community": "^33.0.4",
@@ -34,14 +35,15 @@
     "react-dom": "^18.3.1",
     "react-grid-layout": "^1.5.0",
     "react-gridstack": "^0.1.4",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.2",
+    "react-syntax-highlighter": "^15.6.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-grid-layout": "^1.3.5",
